--- a/src/launcher/html/ownedAssetsHead.html
+++ b/src/launcher/html/ownedAssetsHead.html
@@ -3,5 +3,10 @@
     <a href="ownedAssets?filter=all">show all</a> &bull;
     <a href="ownedAssets?filter=notdownloaded">show only not downloaded</a> &bull;
     <a href="ownedAssets?filter=downloaded">show only downloaded</a>
+    <br>
+    <select>
+        <option value="1">one</option>
+        <option value="2">two</option>
+    </select>
 </p>
 <br>
